--- a/app/src/main/res/layout/room_list_item.xml
+++ b/app/src/main/res/layout/room_list_item.xml
@@ -23,6 +23,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/priceTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="8,000"
@@ -31,6 +32,7 @@
                 android:textColor="#FFA509"/>
 
             <TextView
+                android:id="@+id/addressAndFloorTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="마포구 서교동"
@@ -38,6 +40,7 @@
                 android:layout_marginTop="5dp"/>
 
             <TextView
+                android:id="@+id/descriptionTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="방에 대한 설명 문구"
