방 상세정보로 데이터를 넘겨서 반영

--- a/app/src/main/res/layout/activity_view_room_detail.xml
+++ b/app/src/main/res/layout/activity_view_room_detail.xml
@@ -21,6 +21,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/priceTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2억5,000만원"
@@ -29,6 +30,7 @@
             android:textSize="22sp"/>
 
         <TextView
+            android:id="@+id/descriptionTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="방에 대한 설명"
@@ -58,6 +60,7 @@
             android:layout_weight="1"/>
 
         <TextView
+            android:id="@+id/addressTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="서울시 동대문구"
@@ -88,6 +91,7 @@
             android:layout_weight="1"/>
 
         <TextView
+            android:id="@+id/floorTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="반지하"
