--- a/app/src/main/res/layout/room_list_item.xml
+++ b/app/src/main/res/layout/room_list_item.xml
@@ -12,7 +12,7 @@
         <ImageView
             android:layout_width="120dp"
             android:layout_height="100dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@mipmap/ic_house"
             android:scaleType="centerCrop"/>
 
         <LinearLayout
